Preparando archivo de configuracion

--- a/Kernel/resources/config.cfg
+++ b/Kernel/resources/config.cfg
@@ -2,12 +2,12 @@ PUERTO_PROG=5000
 PUERTO_CPU=5001
 QUANTUM=3
 RETARDO=1000
-MULTIPROGRAMACION=6
-SEMAFOROS=[SEM1,SEM2,SEM3,mutexA,mutexB,c,b,start,done,mutex]
-VALOR_SEMAFORO=[0,0,5,0,0,0,3,0,0,1]
-HIO=[1000,2000,1000,1000]
-ID_HIO=[Disco,Impresora,Scanner,HDD1]
-VARIABLES_COMPARTIDAS=[x,y,z,Global,colas,a,b,search,step,terminar]
+MULTIPROGRAMACION=3
+SEMAFOROS=[b,c]
+VALOR_SEMAFORO=[1,0]
+HIO=[500,200]
+ID_HIO=[HDD1,LPT1]
+VARIABLES_COMPARTIDAS=[colas,compartida]
 IP_UMV=127.0.0.1
 PUERTO_UMV=5002
-STACK_SIZE=1000
+STACK_SIZE=300
